# DietCreator

./: csvToJson.py  main.py  mainApp.py  pyproject.toml
DataConvercion/: CovertTestData.py  CovertTreningData.py
DataConvercion/data/: modified_recipes.csv  modified_recipes2.csv  modified_test_recipes.csv  modified_test_recipes2.csv
DataConvercion/dataToConversion/: recipes.csv  test_recipes.csv
DietCreator/: pyproject.toml
archive/: dataCleaning.py
