[tool.poetry]
name = "dietcreator"
version = "0.1.0"
description = ""
authors = ["nikodemkunach <s25030@pjwstk.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.48.0"
datasets = "^3.2.0"
torch = "^2.5.1"
pgvector = "^0.3.6"
pypdf = "^5.1.0"
psycopg = {extras = ["binary"], version = "^3.2.4"}
sqlalchemy = "^2.0.37"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
